# Orthros

./: Cargo.toml  flake.nix
assets/3d_models/asteroid/: Object001_mtl.material  scene.gltf  scene.gltf.import
assets/3d_models/asteroid/textures/: Object001_mtl_baseColor.jpg.import  Object001_mtl_emissive.jpg.import
assets/3d_models/asteroid_for_free/: defaultMat_003.material  scene.gltf.import
assets/3d_models/asteroid_for_free/textures/: defaultMat.003_baseColor.jpg.import  defaultMat.003_emissive.jpg.import  defaultMat.003_metallicRoughness.png.import  defaultMat.003_normal.jpg.import
assets/3d_models/asteroids_pack_metallic_version/: Material_3.material  license.txt  scene.gltf  scene.gltf.import
assets/3d_models/asteroids_pack_metallic_version/textures/: Material_3_baseColor.jpeg.import  Material_3_metallicRoughness.png.import  Material_3_normal.png.import
assets/3d_models/blade_starship/: Tex_0016_0_dds.material  Tex_0020_0_dds.material  Tex_0020_0_dds_0.material  Tex_0023_0_dds.material  Tex_0023_0_dds_0.material  Tex_0028_0_dds.material  Tex_0028_0_dds_0.material  Tex_0030_0_dds.material  Tex_0030_0_dds_0.material  Tex_0032_0_dds.material  Tex_0036_0_dds.material  Tex_0036_0_dds_0.material  Tex_0038_0_dds.material  Tex_0042_0_dds.material  Tex_0044_0_dds.material  Tex_0044_0_dds_0.material  Tex_0049_0_dds.material  Tex_0050_0_dds.material  Tex_0054_0_dds.material  license.txt  scene.gltf  scene.gltf.import
assets/3d_models/blade_starship/textures/: Tex_0016_0.dds_baseColor.png.import  Tex_0020_0.dds_baseColor.png.import  Tex_0023_0.dds_baseColor.png.import  Tex_0023_0.dds_emissive.png.import  Tex_0028_0.dds_baseColor.png.import  Tex_0030_0.dds_baseColor.png.import  Tex_0032_0.dds_baseColor.png.import  Tex_0032_0.dds_emissive.png.import  Tex_0036_0.dds_baseColor.png.import  Tex_0038_0.dds_baseColor.png.import  Tex_0038_0.dds_emissive.png.import  Tex_0042_0.dds_baseColor.png.import  Tex_0044_0.dds_baseColor.png.import  Tex_0044_0.dds_emissive.png.import  Tex_0049_0.dds_baseColor.png.import  Tex_0050_0.dds_baseColor.png.import  Tex_0050_0.dds_emissive.png.import  Tex_0054_0.dds_baseColor.png.import
assets/3d_models/builder_starship/: 01_-_Default.material  02_-_Default.material  07_-_Default.material  08_-_Default.material  09_-_Default.material  scene.gltf  scene.gltf.import
assets/3d_models/buildings/greek/: spacestation.glb  spacestation.gltf
assets/3d_models/dont_kill_me/: maybe_don't_kill_me.glb
assets/3d_models/environment/: asteroid_01.glb  asteroid_01.gltf  planet.gltf
assets/3d_models/freeport_space_station/: MaterialFBXASC032FBXASC03511231.material  MaterialFBXASC032FBXASC0352142150880.material  ORDNUNGSKRAFTFBXASC032Graviton.material  SG-Gold-glow.material  SG-Window.material  license.txt  scene.gltf  scene.gltf.import
assets/3d_models/stoney_asteroids/: Material_001.material  scene.gltf  scene.gltf.import
assets/3d_models/units/: fighter_01.glb  fighter_01.gltf  untitled.glb
assets/fonts/: Attribution.md
assets/fonts/android-insomnia-font/: info.txt
assets/fonts/aware-font/: info.txt
assets/shaders/: cubemap_unlit.wgsl  plane_shader.wgsl
assets/textures/skybox/: README.md  convert_to_stacked.sh
src/: a_star.rs  camera_controller.rs  civilisation.rs  environment.rs  main.rs  movable.rs  ownable.rs  player_controller.rs  resource_collection.rs  resources.rs  skybox.rs  spawner.rs  ui.rs  unit-creator.rs  utils.rs
(+9 files in other folders)
