[package]
name = "orthros_be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.0-rc.4", features = ["dynamic_linking"]}
bevy_rapier3d = { version = "0.27.0-RC.1", features = [  "debug-render-3d" ] }
# bgel = "0.1.1"
bgel = {path = "../Bevy-glTF-Extended-Loader"}
strum = "*"
strum_macros = "*"
serde_json = "1.0"
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
